# SummerUniversity

cuda/practicals/diffusion/: AscentAdaptor.h  CMakeLists.txt  README.md  catalyst_pipeline.py  catalyst_pipeline_with_pid.py  diffusion2d.cu  diffusion2d_mpi.cu
cuda/practicals/miniapp/: CMakeLists.txt  CatalystAdaptor.h  README.md  catalyst_pipeline.py  main.cu
